<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LasaLara</string>
    
    <!-- Action Bar action items -->

    <string name="reset_progress">Reset Progress</string>
    <string name="turn_page_view_on">Turn Page View ON</string>
    <string name="turn_page_view_off">Turn Page View OFF</string>
    <string name="Switch_QA">Switch Question/Answer</string>
    <string name="propose_question">Propose Question</string>
    <string name="add_book">+</string>
    
    <!--  Add Book screen items -->
    
    <string name="addAuthorEmail">Author\'s e-mail address</string>
    <string name="addBook">Title of the book</string>
    <string name="author">Author</string>
    <string name="book">Book</string>
    <string name="done">Download Book</string>
    
    <!--  Question screen items -->
    
    <string name="feedbackQuestion">Was your answer the same?</string>
    <string name="feedbackAnswerPositive">Yes</string>
    <string name="feedbackAnswerNeutral">Some of it</string>
    <string name="feedbackAnswerNegative">No</string>
    
    <!--  Propose Question screen items -->
    
    <string name="addQuestion">Enter the question</string>
    <string name="addAnswer">Enter the answer</string>
    <string name="question">Proposed Question</string>
    <string name="answer">Proposed Answer</string>
    <string name="send">Send</string>
    
    <!--  Context Menu items -->
    
    <string name="delete">Delete</string>
    
 </resources>
