<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <!-- Reset Progress -->
    <item android:id="@+id/reset_progress"
          android:title="@string/reset_progress"
          android:showAsAction="never"/>
     
    <!-- Turn Page View On -->
    <item android:id="@+id/turn_page_view_on"
          android:title="@string/turn_page_view_on"
          android:showAsAction="never" />
     
    <!-- Switch Question/Answer -->
    <item android:id="@+id/Switch_QA"
          android:title="@string/Switch_QA"
          android:showAsAction="never" />
     
    <!-- Propose Question -->
    <item android:id="@+id/propose_question"
          android:title="@string/propose_question"
          android:showAsAction="never" />
    
</menu> 