<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >
      
    <TextView
        android:id="@+id/authorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"/>
    
    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authorLabel"
        android:hint="@string/addAuthorEmail"
        android:inputType="textEmailAddress"
        android:imeOptions="flagNoExtractUi" />
    
    <TextView
        android:id="@+id/bookLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:text="@string/book" />
            
    <EditText
        android:id="@+id/book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bookLabel"
        android:hint="@string/addBook"
        android:inputType="text"/>
    
</RelativeLayout>

