<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:gravity="center_horizontal" >
      
    <TextView
        android:id="@+id/questionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="13dp"
        android:text="@string/question"/>
    
    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questionLabel"
        android:hint="@string/addQuestion"
        android:inputType="textMultiLine"
        android:imeOptions="flagNoExtractUi"
        android:focusable="true" />
    
    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question"
        android:paddingLeft="13dp"
        android:paddingTop="20dp"
        android:text="@string/answer" />
            
    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerLabel"
        android:hint="@string/addAnswer"
        android:inputType="textMultiLine"/>    

</RelativeLayout>

