<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dip">

    <TextSwitcher
        android:id="@+id/questionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:text="" />
    
	<View
	    android:id="@+id/separator"
	    android:padding="20dip"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_below="@id/questionView"
	    android:background="@android:color/darker_gray"/>
	
    <TextSwitcher
        android:id="@+id/answerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_alignParentLeft="true"
        android:gravity="left"
        android:text="" />
    
    <TableLayout
        android:id="@+id/feedback"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="1">

        <TableRow android:gravity="center" >

            <TextView
                android:text="@string/feedbackQuestion"
                android:textSize="@dimen/activity_vertical_margin" />

        </TableRow>
        <TableRow android:stretchColumns="*"
            	  android:gravity="bottom">

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/positiveFeedback"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_important"
                android:text="@string/feedbackAnswerPositive"
                android:textSize="@dimen/activity_vertical_margin"
                android:onClick="onFeedback" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/neutralFeedback"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_half_important"
                android:text="@string/feedbackAnswerNeutral"
                android:textSize="@dimen/activity_horizontal_margin"
                android:onClick="onFeedback" />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:id="@+id/negativeFeedback"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_action_not_important"
                android:text="@string/feedbackAnswerNegative"
                android:textSize="@dimen/activity_horizontal_margin"
                android:onClick="onFeedback" />

        </TableRow>
    </TableLayout>

</RelativeLayout>
